<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.owl.todolist.MainActivity"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/home_title_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttons_linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.15"
        android:gravity="center"
        android:text="@string/welcome_message"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <LinearLayout
        android:id="@+id/buttons_linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/todo_item_recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_title_text_view"
        android:orientation="horizontal">

        <Button
            android:id="@+id/todays_items_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pureBlack"
            android:textColor="@color/pureWhite"
            android:text="@string/today_button_text"
            android:textSize="15sp"
            android:onClick="displayTodaysItems"/>

        <Button
            android:id="@+id/past_items_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pureWhite"
            android:textColor="@color/pureBlack"
            android:text="@string/past_button_text"
            android:textSize="15sp"
            android:onClick="displayPastItems"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/todo_item_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttons_linear_layout"
        app:layout_constraintVertical_weight="0.85"
        >

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/home_add_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintVertical_bias="0.9"
        android:text="@string/add_symbol"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="#000000"
        android:textColor="#ffffff"
        android:onClick="navToAddItemAction"/>

</android.support.constraint.ConstraintLayout>
